# PyDocGen

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .pydocgen.yaml  LICENSE  README.md  pyproject.toml  run_tests.py
examples/: .pre-commit-config.yaml  .pydocai.yaml  __init__.py  example_module.py
pydocgen/: __init__.py  cli.py  config.py  docstring_generator.py  git_utils.py
pydocgen/templates/: __init__.py  google.jinja2  numpy.jinja2  rst.jinja2
tests/: __init__.py  test_cli.py  test_config.py  test_docstring_generator.py  test_git_utils.py  test_init.py
