[project]
name = "pydocgen"
version = "0.1.0"
description = "A pre-commit hook that automatically adds missing docstrings to Python files"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    {name = "PyDocGen Team", email = "example@example.com"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "astroid>=3.3.9",
    "click>=8.1.8",
    "click-help-colors>=0.9.4",
    "jinja2>=3.1.6",
    "pyyaml>=6.0.2",
]

[project.urls]
Homepage = "https://github.com/yourusername/pydocgen"

[project.scripts]
pydocgen = "pydocgen.cli:main"
