[project]
name = "pydocgen"
version = "0.1.0"
description = "A pre-commit hook that automatically adds missing docstrings to Python files"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    {name = "PyDocGen Team", email = "example@example.com"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "click>=8.1.8",
    "click-help-colors>=0.9.4",
    "jinja2>=3.1.6",
    "pyyaml>=6.0.2",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/pydocgen"

[project.scripts]
pydocgen = "pydocgen:main"
